<resources>
    <string name="app_name">ChuckNorrisFacts</string>
    <string name="pref_previously_started">pref_previously_started</string>
    <string name="welcome_text_2">Bem vindo ao app Fatos do Chuck Norris. Vamos começar?</string>
    <string name="welcome_text_1">Olá!</string>
    <string name="comecar">COMEÇAR</string>
    <string name="textviewfact">TextViewFact</string>
    <string name="textviewcategory">TextViewCategory</string>
    <string name="button_request_fact">God Chuck Norris, inlight me!</string>
    <string name="buttonshare">buttonShare</string>
    <string name="random_fact">Random Fact</string>
    <string name="fact_by_category">Fact by category</string>
    <string name="fact_by_word">Fact by word</string>
    <string name="category">Choose a category </string>
    <string name="msgEmptySearch">Error: Please, insert any word!</string>
    <string name="textviewerror">textViewError</string>
    <string name="imagebutton">imageButton</string>
</resources>
