<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.FirstAccessActivity">

    <Button
            android:text="@string/comecar"
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:id="@+id/buttonComecar" android:textColor="#F8683A"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@android:color/transparent"
            android:background="@android:color/transparent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textSize="16sp"/>
    <TextView
            android:text="@string/welcome_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="22sp"
            android:textStyle="bold" android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/welcome_text_2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/textView2" android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>